# Better-Shulkers

./: .gitignore  LICENSE.txt  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
.github/workflows/: build.yml  publish.yml  wiki.yml
_site/: index.html
common/: build.gradle  gradle.properties
common/src/main/resources/: bettershulkers.mixins.json
fabric/: build.gradle  gradle.properties
fabric/src/main/resources/: fabric.mod.json
gradle/: libs.versions.toml
neoforge/: build.gradle  gradle.properties
remappedSrc/me/noramibu/bettershulkers/: BetterShulkers.java
remappedSrc/me/noramibu/bettershulkers/accessor/: ShulkerMaterialAccessor.java
remappedSrc/me/noramibu/bettershulkers/command/: ShulkerCommand.java
remappedSrc/me/noramibu/bettershulkers/config/: Config.java
remappedSrc/me/noramibu/bettershulkers/event/: UseItemListener.java
remappedSrc/me/noramibu/bettershulkers/recipe/: BetterShulkersRecipes.java
remappedSrc/me/noramibu/bettershulkers/util/: ShulkerUtil.java
remappedSrc/me/noramibu/mixin/: BlockMixin.java  ItemEntityMixin.java  ShulkerBoxBlockEntityMixin.java  ShulkerBoxBlockMixin.java
src/fabric/resources/: fabric.mod.json
src/main/java/me/noramibu/bettershulkers/: BetterShulkers.java
src/main/resources/: better-shulkers.mixins.json  bettershulkers.mixins.json  fabric.mod.json  pack.mcmeta
wiki/: Cargo.toml  build.rs
wiki/src/: main.rs
wiki/ui/: animated_image.slint  redirects.slint  site.slint  theme.slint  utility.slint
(+161 files in other folders)
