[package]
name = "wiki"
version = "0.0.1"
edition = "2024"
build = "build.rs"

[dependencies]
slint = "1.12.1"
web-sys = { version = "0.3.77", default-features = false, features = ["Window", "Location"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { version = "0.2" }

[build-dependencies]
slint-build = "1.12.1"


[lib]
path = "src/main.rs"
crate-type = ["cdylib"]